vlib/v/checker/tests/int_signess_call_arg_test.vv
module main

fn test_main() {
	a := -1
	ztest(a)
	ztest2(-1)
	ztest3(-1)
	ztest4(-1)
	ztest5(-1)
}

fn ztest(len u64) {
	println(len)
}

fn ztest2(len u8) {
	println(len)
}

fn ztest3(len u16) {
	println(len)
}

fn ztest4(len u32) {
	println(len)
}

fn ztest5(len usize) {
	println(len)
}
